# Query-flooding-based-Resource-Sharer

./: CMakeLists.txt  Client.cpp  Client.h  ConfigManager.h  Controller.cpp  Controller.h  DownloadManager.cpp  DownloadManager.h  Peer.cpp  Peer.h  Query.h  QueryHit.h  README.md  Server.cpp  Server.h  UI.cpp  UI.h  app.rc  fileHelper.cpp  fileHelper.h  main.cpp
